# yeet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: FileReader.h  FileWriter.h  Peer.h  Yeet.h
src/: AnswerPeer.cpp  FileReader.cpp  FileWriter.cpp  OfferPeer.cpp  Peer.cpp  main.cpp
